<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_start" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStart"
        android:layout_below="@+id/btnStart"
        android:layout_marginTop="14dp"
        android:text="@string/btn_stop" />

    <Button
        android:id="@+id/btnBangding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStop"
        android:layout_below="@+id/btnStop"
        android:layout_marginTop="15dp"
        android:text="@string/btn_bangding" />

    <Button
        android:id="@+id/btnJiebang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBangding"
        android:layout_centerVertical="true"
        android:text="@string/btn_jiebang" />

    <Button
        android:id="@+id/btnGetData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnJiebang"
        android:layout_below="@+id/btnJiebang"
        android:layout_marginTop="19dp"
        android:text="@string/btn_getdata" />

</RelativeLayout>